[package]
name = "kms-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
aws-sdk-kms = "0.17.0"
base64 = "0.13.0"
clap = { version = "3.2.17", features = ["derive"] }
regex = "1.6.0"
tokio = { version = "1.20.1", features = ["full"] }
